Hardcode the current board over to the index file and apply basic styling

--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
-"Hello World" 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TRG-BUILD</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>TRG-BUILD</h1>
+    <table>
+        <tr>
+            <th>Python Course Improvements</th>
+        </tr>
+        <tr>
+            <td>Installation & verification of Win/IOS</td>
+        </tr>
+        <tr>
+            <td>Create new exercises</td>
+        </tr>
+        <tr>
+            <td>Installation via anaconda</td>
+        </tr>
+        <tr>
+            <td>Create video going through installation & verification file</td>
+        </tr>
+        <tr>
+            <td>Create video explaining the file system (where they are + where they shouldn't be (any drive))</td>
+        </tr>
+        <tr>
+            <td>Simple console python examplevideo, showing how to activate scripts via console & pycharm and how they relate</td>
+        </tr>
+        <tr>
+            <td>Create a Pycharm walkthrough video</td>
+        </tr>
+        <tr>
+            <td>Create a video descriping how to resolve/read common errors (no interpreter found, syntax error, type error, etc.)</td>
+        </tr>
+    </table>
+    <br>
+    <table>
+        <tr>
+            <th>Sumo Course</th>
+        </tr>
+        <tr>
+            <td>Installation & Verification for Win/IOS</td>
+        </tr>
+        <tr>
+            <td>Examples for traci</td>
+        </tr>
+    </table>
+    <br>
+    <table>
+        <tr>
+            <th>Project Templates (to quickly start similar projects)</th>
+        </tr>
+        <tr>
+            <td>SmartMicro data reading/analysis</td>
+        </tr>
+        <tr>
+            <td>MapMatching with Valhalla</td>
+        </tr>
+        <tr>
+            <td>Automated route cutting into segments</td>
+        </tr>
+        <tr>
+            <td>Minimal Web Service creation</td>
+        </tr>
+        <tr>
+            <td>Simple/Categorical data counter app (must be made from a website and able to work offline)</td>
+        </tr>
+        <tr>
+            <td>Anonymise GPS data</td>
+        </tr>
+    </table>
+    <br>
+    <table>
+        <tr>
+            <th>New Tools</th>
+        </tr>
+        <tr>
+            <td>ANPR pipeline (OpenANPR+ANPR_uno)</td>
+        </tr>
+        <tr>
+            <td>Simple CV pipeline based on STRUDL</td>
+        </tr>
+        <tr>
+            <td>[vids] -> [yolo?, SSD, RCNN] -> [calleb?, proceej?] -> [tracking] -> [trajectories]</td>
+        </tr>
+        <tr>
+            <td>Automatic camera callibration</td>
+        </tr>
+    </table>
+    <br>
+    <table>
+        <tr>
+            <th>Anaconda</th>
+        </tr>
+        <tr>
+            <td>AAU.traffic channel</td>
+        </tr>
+    </table>
+    <br>
+    <table>
+        <tr>
+            <th>Others & Quality of life improvements</th>
+        </tr>
+        <tr>
+            <td>Figure out machine learning on IOS</td>
+        </tr>
+        <tr>
+            <td>Firgure out sending MSTeams messages with python</td>
+        </tr>
+    </table>
+    <br>
+    
+    <!--
+    Copy Paste this template to create new project ideas (remember the <br> tag!)
+    <table>
+        <tr>
+            <th>Title</th>
+        </tr>
+        <tr>
+            <td>Bulletpoint</td>
+        </tr>
+        <tr>
+            <td>Bulletpoint</td>
+        </tr>
+        <tr>
+            <td>Bulletpoint</td>
+        </tr>
+        <tr>
+            <td>Bulletpoint</td>
+        </tr>
+        <tr>
+            <td>Bulletpoint</td>
+        </tr>
+        <tr>
+            <td>Bulletpoint</td>
+        </tr>
+    </table>
+    <br>
+    -->
+</body>
