--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <td>Simple CV pipeline based on STRUDL</td>
         </tr>
         <tr>
-            <td>[vids] -> [yolo?, SSD, RCNN] -> [calleb?, proceej?] -> [tracking] -> [trajectories]</td>
+            <td>[vids] -> [YOLO, SSD, RCNN] -> [callibration, projection] -> [tracking] -> [trajectories]</td>
         </tr>
         <tr>
             <td>Automatic camera callibration</td>
