Update with showing degree of done

--- a/index.html
+++ b/index.html
@@ -8,107 +8,108 @@
 <body>
     <h1>TRG-BUILD</h1>
     <table>
-        <tr>
+        <tr class="not-done">
             <th>Python Course Improvements</th>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Installation & verification of Win/IOS</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Create new exercises</td>
+            <td>Ongoing</td>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Installation via anaconda</td>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Create video going through installation & verification file</td>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Create video explaining the file system (where they are + where they shouldn't be (any drive))</td>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Simple console python examplevideo, showing how to activate scripts via console & pycharm and how they relate</td>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Create a Pycharm walkthrough video</td>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Create a video descriping how to resolve/read common errors (no interpreter found, syntax error, type error, etc.)</td>
         </tr>
     </table>
     <br>
     <table>
-        <tr>
+        <tr class="not-done">
             <th>Sumo Course</th>
         </tr>
-        <tr>
+        <tr class="done">
             <td>Installation & Verification for Win/IOS</td>
         </tr>
-        <tr>
-            <td>Examples for traci</td>
+        <tr class="done">
+            <td>Create small video showing python and how to use the console</td>
         </tr>
     </table>
     <br>
     <table>
-        <tr>
+        <tr class="not-done">
             <th>Project Templates (to quickly start similar projects)</th>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>SmartMicro data reading/analysis</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>MapMatching with Valhalla</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Automated route cutting into segments</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Minimal Web Service creation</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Simple/Categorical data counter app (must be made from a website and able to work offline)</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Anonymise GPS data</td>
         </tr>
     </table>
     <br>
     <table>
-        <tr>
+        <tr class="not-done">
             <th>New Tools</th>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>ANPR pipeline (OpenANPR+ANPR_uno)</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Simple CV pipeline based on STRUDL</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>[vids] -> [YOLO, SSD, RCNN] -> [callibration, projection] -> [tracking] -> [trajectories]</td>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Automatic camera callibration</td>
         </tr>
     </table>
     <br>
     <table>
-        <tr>
+        <tr class="not-done">
             <th>Anaconda</th>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>AAU.traffic channel</td>
         </tr>
     </table>
     <br>
     <table>
-        <tr>
+        <tr class="not-done">
             <th>Others & Quality of life improvements</th>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Figure out machine learning on IOS</td>
         </tr>
-        <tr>
-            <td>Firgure out sending MSTeams messages with python</td>
+        <tr class="done">
+            <td>Figure out sending MSTeams messages with python</td>
         </tr>
     </table>
     <br>
@@ -116,25 +117,13 @@
     <!--
     Copy Paste this template to create new project ideas (remember the <br> tag!)
     <table>
-        <tr>
+        <tr class="not-done">
             <th>Title</th>
         </tr>
-        <tr>
+        <tr class="not-done">
             <td>Bulletpoint</td>
         </tr>
-        <tr>
-            <td>Bulletpoint</td>
-        </tr>
-        <tr>
-            <td>Bulletpoint</td>
-        </tr>
-        <tr>
-            <td>Bulletpoint</td>
-        </tr>
-        <tr>
-            <td>Bulletpoint</td>
-        </tr>
-        <tr>
+        <tr class="not-done">
             <td>Bulletpoint</td>
         </tr>
     </table>
