Update SUMO course to done

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </table>
     <br>
     <table>
-        <tr class="not-done">
+        <tr class="done">
             <th>Sumo Course</th>
         </tr>
         <tr class="done">
