Add assignment to others and quality of life

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
         <tr class="done">
             <td>Figure out sending MSTeams messages with python</td>
         </tr>
+        <tr class="not-done">
+            <td>Setup and update the overview of the library (PHP BIBL)</td>
+        </tr>
     </table>
     <br>
     
